# test-git-fossdev

./: .gitignore  Makefile  PracticeMakefile  README.md  script.py  test.py
diagrams/: context.drawio
docs_comments/docs/: SPECEFICATION.md
docs_comments/docs/source/: QUICKSTART.md  conf.py  index.rst
docs_comments/src/: sales.py
linux_as_execenv/: pinger.py
order_service/: pyproject.toml
testing/src/: math_demo.py
testing/tests/: test_principles.py
testing_tdd/: setup.py
testing_tdd/docs/: DOMAIN.md
testing_tdd/src/: ndfl.py
testing_tdd/tests/: test_ndfl_basic.py
