[tool.poetry]
name = "order-service"
version = "0.0.1"
description = "Application for serving users orders"
authors = ["Artem Vesnin <artemvesnin@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.136.1"
uvicorn = {extras = ["standard"], version = "^0.46.0"}
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
